width - name alignment  - sidebar - css fix

--- a/src/app/shared-components/inline-edit/inline-edit.component.css
+++ b/src/app/shared-components/inline-edit/inline-edit.component.css
@@ -9,7 +9,7 @@ input[readonly] {
 }
 
 .semantic-name {
-  font-size: 24px;
+  font-size: 18px;
   width: 72%;
   text-overflow: ellipsis;
   overflow: hidden;
